# slim

./: 404.html
.github/: release-manifest.json
charts/slim/: CHANGELOG.md  Chart.yaml
control-plane/control-plane/: CHANGELOG.md
data-plane/: Cargo.toml
data-plane/bindings/rust/: CHANGELOG.md  Cargo.toml
data-plane/core/auth/: CHANGELOG.md  Cargo.toml
data-plane/core/config/: CHANGELOG.md  Cargo.toml
data-plane/core/controller/: CHANGELOG.md  Cargo.toml
data-plane/core/controller/src/: service.rs
data-plane/core/datapath/: CHANGELOG.md  Cargo.toml
data-plane/core/datapath/benches/: pool_benchmark.rs
data-plane/core/datapath/src/: forwarder.rs  message_processing.rs
data-plane/core/datapath/src/tables/: connection_table.rs  pool.rs  subscription_table.rs
data-plane/core/datapath/tests/: data_path_test.rs
data-plane/core/mls/: CHANGELOG.md  Cargo.toml
data-plane/core/service/: CHANGELOG.md  Cargo.toml
data-plane/core/service/src/: service.rs
data-plane/core/session/: CHANGELOG.md  Cargo.toml
data-plane/core/signal/: CHANGELOG.md  Cargo.toml
data-plane/core/slim/: CHANGELOG.md
data-plane/core/tracing/: CHANGELOG.md  Cargo.toml
data-plane/slimctl/: CHANGELOG.md  Cargo.toml
data-plane/testing/: CHANGELOG.md
deployments/: Taskfile.yaml
deployments/multicluster_on_prem/: Taskfile.yaml  cluster-a-values.yaml  cluster-b-values.yaml  cluster-issuer.yaml  controller-values.yaml  ingress-nginx-values.yaml
dev/: 404.html  index.html  robots.txt  sitemap.xml
dev/community/: index.html
dev/javascripts/: card-links.js  external-links.js
dev/search/: search_index.json
dev/slim/slim-a2a/: index.html
dev/slim/slim-authentication/: index.html
dev/slim/slim-controller/: index.html
dev/slim/slim-controller-reference/: index.html
dev/slim/slim-data-plane/: index.html
dev/slim/slim-data-plane-config/: index.html
dev/slim/slim-group/: index.html
dev/slim/slim-group-tutorial/: index.html
dev/slim/slim-howto/: index.html
dev/slim/slim-integrations/: index.html
dev/slim/slim-mcp/: index.html
dev/slim/slim-otel/: index.html
dev/slim/slim-overview/: index.html
dev/slim/slim-rpc/: index.html
dev/slim/slim-session/: index.html
dev/slim/slim-slimrpc-compiler/: index.html
dev/stylesheets/: agntcy-docs.css
docs/: README.md  Taskfile.yml  convert_tabs.py  hugo.toml
docs/assets/css/: styles.css
docs/content/: _index.md  slim-controller-reference.md  slim-controller.md
docs/content/getting-started-with-slim/: slim-data-plane-config.md  slim-howto.md
docs/content/slim-groups/: slim-group-tutorial.md  slim-group.md
docs/content/slim-integrations/: slim-a2a.md  slim-mcp.md  slim-otel.md
docs/content/slim-integrations/slimrpc/: _index.md  slim-rpc.md  slim-slimrpc-compiler.md
docs/content/slim-messaging-layer/: slim-authentication.md  slim-data-plane.md  slim-session.md
docs/layouts/: index.html  index.json
docs/layouts/_default/: baseof.html  list.html  single.html
docs/layouts/_default/_markup/: render-link.html
docs/layouts/partials/: footer.html  head.html  header.html  sidebar.html
docs/layouts/shortcodes/: callout.html  card.html  cards.html
docs/public/: index.html  index.json  index.xml  sitemap.xml
docs/public/categories/: index.html  index.xml
docs/public/css/: styles.min.css
docs/public/getting-started-with-slim/: index.html  index.xml
docs/public/getting-started-with-slim/slim-data-plane-config/: index.html
docs/public/getting-started-with-slim/slim-howto/: index.html
docs/public/slim-controller/: index.html
docs/public/slim-controller-reference/: index.html
docs/public/slim-groups/: index.html  index.xml
docs/public/slim-groups/slim-group/: index.html
docs/public/slim-groups/slim-group-tutorial/: index.html
docs/public/slim-integrations/: index.html  index.xml
docs/public/slim-integrations/slim-a2a/: index.html
docs/public/slim-integrations/slim-mcp/: index.html
docs/public/slim-integrations/slim-otel/: index.html
docs/public/slim-integrations/slimrpc/: index.html  index.xml
docs/public/slim-integrations/slimrpc/slim-rpc/: index.html
docs/public/slim-integrations/slimrpc/slim-slimrpc-compiler/: index.html
docs/public/slim-messaging-layer/: index.html  index.xml
docs/public/slim-messaging-layer/slim-authentication/: index.html
docs/public/slim-messaging-layer/slim-data-plane/: index.html
docs/public/slim-messaging-layer/slim-session/: index.html
docs/public/tags/: index.html  index.xml
docs/slim-graph/: README.md  index.html
docs/slim-graph/css/: styles.css
docs/slim-graph/js/: app.js  config.js  logger.js  particle.js
