[package]
name = "agntcy-slim-auth"
version = "0.8.0"
license = { workspace = true }
edition = { workspace = true }
description = "Authentication utilities for the Agntcy Slim framework"

[lib]
name = "slim_auth"

[dependencies]
agntcy-slim-version = { workspace = true }
async-trait = { workspace = true }
aws-lc-rs = { workspace = true }
base64 = { workspace = true }
display-error-chain = { workspace = true }
futures = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
mls-rs-core = { workspace = true }
mls-rs-crypto-awslc = { workspace = true }
notify = { workspace = true }
oauth2 = { workspace = true, features = ["reqwest"] }
parking_lot = { workspace = true }
pin-project = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }

[target.'cfg(not(target_family = "windows"))'.dependencies]
spiffe = { workspace = true }

[dev-dependencies]
agntcy-slim-config = { path = "../config" }
agntcy-slim-testing = { path = "../../testing" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "fs"] }
tokio-test = { workspace = true }
tracing-test = { workspace = true }
# uuid moved to optional dependency under [dependencies] for feature = "testutils"
