[package]
name = "agntcy-slim-datapath"
version = "0.12.3"
edition = { workspace = true }
license = { workspace = true }
description = "Core data plane functionality for SLIM"

[lib]
name = "slim_datapath"

[dependencies]
agntcy-slim-config = { workspace = true }
agntcy-slim-tracing = { workspace = true }
agntcy-slim-version = { workspace = true }
display-error-chain = { workspace = true }
drain = { workspace = true }
h2 = { workspace = true }
opentelemetry = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
twox-hash = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
protoc-bin-vendored = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[[bench]]
name = "pool_benchmark"
harness = false
