[package]
name = "agntcy-slim-mls"
edition = { workspace = true }
license = { workspace = true }
version = "0.1.16"
description = "Messaging Layer Security for SLIM data plane."

[lib]
name = "slim_mls"

[dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-version = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
mls-rs = { workspace = true }
mls-rs-core = { workspace = true }
mls-rs-crypto-awslc = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.3"
