[package]
name = "agntcy-slim-service"
edition = { workspace = true }
license = { workspace = true }
version = "0.8.13"
description = "Main service and public API to interact with SLIM data plane."

[lib]
name = "slim_service"
crate-type = ["lib"]

[features]
default = ["session"]
session = ["agntcy-slim-session"]

[dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-config = { workspace = true }
agntcy-slim-controller = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-mls = { workspace = true }
agntcy-slim-session = { workspace = true, optional = true }
agntcy-slim-version = { workspace = true }
async-trait = { workspace = true }
display-error-chain = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
agntcy-slim-testing = { workspace = true }
tokio-test = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
