[package]
name = "agntcy-slim-session"
edition = { workspace = true }
license = { workspace = true }
version = "0.1.13"
description = "SLIM session internal implementation."

[lib]
name = "slim_session"

[dependencies]
agntcy-slim-auth = { workspace = true }
agntcy-slim-datapath = { workspace = true }
agntcy-slim-mls = { workspace = true }
agntcy-slim-version = { workspace = true }
async-trait = { workspace = true }
display-error-chain = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
agntcy-slim-testing = { workspace = true }
tracing-test = { workspace = true }
