[package]
name = "agntcy-slim-signal"
edition = { workspace = true }
license = { workspace = true }
version = "0.1.10"
description = "Small library to handle OS signals."

[lib]
name = "slim_signal"

[dependencies]
agntcy-slim-version = { workspace = true }
tokio = { version = "1", features = ["macros", "signal"] }
tracing = { workspace = true }
