[package]
name = "agntcy-slim-tracing"
edition = { workspace = true }
license = { workspace = true }
version = "0.3.10"
description = "Observability for SLIM data plane: logs, traces and metrics infrastructure."

[lib]
name = "slim_tracing"

[dependencies]
agntcy-slim-config = { workspace = true }
agntcy-slim-version = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
